mac: Crash on uncaught Objective-C exceptions routed to NSApplication

-[NSApplication reportException:] accepts an NSException* which it
logs via NSLog(), and then takes one of these actions:
 1. Immediate intentional crash.
 2. Swallow the exception and return.
 3. Show a dialog that lets the user choose between 1 and 2.

The only option that makes sense to Chrome is (1), an immediate
intentional crash, which can be achieved by setting the
NSApplicationCrashOnExceptions user default to YES. Do this early in
application startup.

BUG=624885

Review-Url: https://codereview.chromium.org/2112553009
Cr-Commit-Position: refs/heads/master@{#403545}

Former-commit-id: b296d953fe840f3cdf609bde2dc3de53baabae63